Attempting to fix spacing on the correct elements.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ a:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 	min-height: 98vh;
 	border-radius: 100px;
-	border-spacing: 50px;
+	padding: 100px;
 }
 
 .content {
@@ -87,10 +87,7 @@ a:hover {
 
 .content_table tr td p {
 	font-size: 25px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 20px;
 	background-color: rgba(0, 0, 0, 0.2);
 	border-radius: 20px;
 	
@@ -150,7 +147,7 @@ a:hover {
 
 .website_header {
 	border-spacing: 0px;
-	padding: 100px;
+	padding: 10px;
 	border-radius: 20px;
 	max-height: 60px;
 	background-image: url("https://bpb-ca-c1.wpmucdn.com/mycentennial.sd43.bc.ca/dist/f/2812/files/2023/01/dots-6297146_1920.jpg");
